feat(TDI-45778): deprecate mongo 3.5.x.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages.properties
@@ -27,7 +27,7 @@ USE_CONNECTION_STRING.NAME=Use connection string
 CONNECTION_STRING.NAME=
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_4_4_X=MongoDB 4.4.X and later
-DB_VERSION.ITEM.MONGODB_3_5_X=MongoDB 3.5.X
+DB_VERSION.ITEM.MONGODB_3_5_X=MongoDB 3.5.X (Deprecated)
 READ_PREFERENCE_GROUP.NAME=Read Preference
 SET_READ_PREFERENCE.NAME=Set read preference
 READ_PREFERENCE.NAME=Read Preference
