--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages.properties
@@ -61,7 +61,7 @@ USE_CONNECTION_STRING.NAME=Use connection string
 CONNECTION_STRING.NAME=
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_4_4_X=MongoDB 4.4.X and later
-DB_VERSION.ITEM.MONGODB_3_5_X=MongoDB 3.5.X
+DB_VERSION.ITEM.MONGODB_3_5_X=MongoDB 3.5.X (Deprecated)
 SET_WRITE_CONCERN.NAME=Set write concern
 WRITE_CONCERN.NAME=Write concern
 WRITE_CONCERN_GROUP.NAME=Write concern
