--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages.properties
@@ -20,7 +20,7 @@ REPLICA_SET.ITEM.REPLICA_HOST=Replica host
 REPLICA_SET.ITEM.REPLICA_PORT=Replica port
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_4_4_X=MongoDB 4.4.X and later
-DB_VERSION.ITEM.MONGODB_3_5_X=MongoDB 3.5.X
+DB_VERSION.ITEM.MONGODB_3_5_X=MongoDB 3.5.X (Deprecated)
 USE_SSL.NAME=Use SSL connection (Configure the SSL authentication in tSetKeystore or in studio preferences)
 
 
