--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBConnection/tMongoDBConnection_messages.properties
@@ -16,7 +16,7 @@ CONNECTION_STRING.NAME=
 CONNECTION.NAME=Connection
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_4_4_X=MongoDB 4.4.X and later
-DB_VERSION.ITEM.MONGODB_3_5_X=MongoDB 3.5.X
+DB_VERSION.ITEM.MONGODB_3_5_X=MongoDB 3.5.X (Deprecated)
 SET_READ_PREFERENCE.NAME=Set read preference
 READ_PREFERENCE.NAME=Read Preference
 READ_PREFERENCE_GROUP.NAME=Read preference
