--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBGridFSGet/tMongoDBGridFSGet_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBGridFSGet/tMongoDBGridFSGet_messages.properties
@@ -23,7 +23,7 @@ REPLICA_SET.ITEM.REPLICA_HOST=Host
 REPLICA_SET.ITEM.REPLICA_PORT=Port
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_4_4_X=MongoDB 4.4.X and later
-DB_VERSION.ITEM.MONGODB_3_5_X=MongoDB 3.5.X
+DB_VERSION.ITEM.MONGODB_3_5_X=MongoDB 3.5.X (Deprecated)
 READ_PREFERENCE_GROUP.NAME=Read Preference
 SET_READ_PREFERENCE.NAME=Set read preference
 READ_PREFERENCE.NAME=Read Preference
