--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages.properties
@@ -31,7 +31,7 @@ USE_CONNECTION_STRING.NAME=Use connection string
 CONNECTION_STRING.NAME=
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.MONGODB_4_4_X=MongoDB 4.4.X and later
-DB_VERSION.ITEM.MONGODB_3_5_X=MongoDB 3.5.X
+DB_VERSION.ITEM.MONGODB_3_5_X=MongoDB 3.5.X (Deprecated)
 USE_SSL.NAME=Use SSL connection (Please use a tSetKeystore to configure the authentication)
 AUTHENTICATION_MECHANISM.NAME=Authentication mechanism
 AUTHENTICATION_MECHANISM.ITEM.NEGOTIATE_MEC=NEGOTIATE (Recommended for non Kerberized environments)
