--- a/main/plugins/org.talend.designer.bigdata.di/pom.xml
+++ b/main/plugins/org.talend.designer.bigdata.di/pom.xml
@@ -36,6 +36,7 @@
                         <configuration>
                             <outputDirectory>${project.basedir}/lib</outputDirectory>
                             <includeArtifactIds>annotations</includeArtifactIds>
+			    <excludeGroupIds>p2.eclipse-plugin,org.talend.studio</excludeGroupIds>
                         </configuration>
                     </execution>
                 </executions>
