--- a/main/plugins/org.talend.repository.hadoopcluster.configurator/.classpath
+++ b/main/plugins/org.talend.repository.hadoopcluster.configurator/.classpath
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src/"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/annotations-17.0.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/cloudera-manager-api-swagger-6.2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/geronimo-javamail_1.4_spec-1.7.1.jar"/>
